# rewordle-rust

./: .gitignore  Cargo.toml  README.md
src/: game.rs  main.rs  rewordle_screen.rs  storage.rs  tui_engine.rs  ui.rs  words.rs
src/elements/: answer.rs  board.rs  button_next.rs  delete_key.rs  enter_key.rs  graphs.rs  keyboard.rs  mod.rs  results.rs  screen.rs  title_bar.rs
src/ui/: animators.rs  answer.rs  board.rs  button_exit.rs  button_next.rs  centered_modal.rs  constants.rs  delete_key.rs  elements.rs  enter_key.rs  graphs.rs  keyboard.rs  mod.rs  results.rs  screen.rs  title.rs  title_bar.rs  utils.rs
