[package]
name = "rustywordle"
version = "0.1.0"
edition = "2021"

description = "Rusty Wordle lets you play all the Wordle words from the beginning in the terminal"
license = "CC-BY-NC-ND-4.0"
authors = ["Yaron (Ron) Ilan"]
homepage = "https://github.com/ronilan/rustywordle"
repository = "https://github.com/ronilan/rustywordle"
readme = "README.md"
keywords = ["game", "wordle", "terminal"]
categories = ["games"]
exclude = ["examples", "media"]

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3.31"
futures-timer = "3.0.3"
terminal_style = "0.4.0"

[[bin]]
name = "rustywordle"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1