[package]
name = "rewordle"
version = "0.1.0"
edition = "2021"

description = "Rewordle lets you play all the Wordle words from the beginning in the terminal"
license = "CC-BY-NC-ND-4.0"
authors = ["Yaron (Ron) Ilan"]
homepage = "https://github.com/ronilan/rewordle-rust"
repository = "https://github.com/ronilan/rewordle-rust"
readme = "README.md"
keywords = ["game", "wordle", "terminal", "rewordle"]
categories = ["games"]
exclude = ["examples", "media"]

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3.31"
futures-timer = "3.0.3"
terminal_style = "0.4.0"

[[bin]]
name = "rewordle"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1